--- a/Copernicus.Models.CRM/app.config
+++ b/Copernicus.Models.CRM/app.config
@@ -42,6 +42,10 @@
         <assemblyIdentity name="System.Reflection.Metadata" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-1.0.11.0" newVersion="1.0.11.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="NuGet.Core" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.8.50506.491" newVersion="2.8.50506.491" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
