--- a/Copernicus/Web.config
+++ b/Copernicus/Web.config
@@ -27,7 +27,7 @@
     <add key="elmah.mvc.allowedUsers" value="*" />
     <add key="elmah.mvc.route" value="elmah" />
     <add key="Ironman:PluginSource" value="http://localhost:8797/api/v2" />
-  </appSettings>
+  <add key="RouteDebugger:Enabled" value="true" /></appSettings>
   <!--
     For a description of web.config changes for .NET 4.5 see http://go.microsoft.com/fwlink/?LinkId=235367.
 
