--- a/Copernicus/packages.config
+++ b/Copernicus/packages.config
@@ -2,29 +2,29 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net45" />
   <package id="Bender" version="3.0.1.0" targetFramework="net45" />
-  <package id="CraigsUtilityLibrary" version="4.0.208-beta" targetFramework="net452" />
-  <package id="CUL.Bender" version="4.0.208-beta" targetFramework="net452" />
-  <package id="CUL.fastJSON" version="4.0.208-beta" targetFramework="net452" />
-  <package id="CUL.MiniProfiler" version="4.0.208-beta" targetFramework="net452" />
-  <package id="CUL.NLog" version="4.0.208-beta" targetFramework="net452" />
+  <package id="CraigsUtilityLibrary" version="4.0.209-beta" targetFramework="net452" />
+  <package id="CUL.Bender" version="4.0.209-beta" targetFramework="net452" />
+  <package id="CUL.fastJSON" version="4.0.209-beta" targetFramework="net452" />
+  <package id="CUL.MiniProfiler" version="4.0.209-beta" targetFramework="net452" />
+  <package id="CUL.NLog" version="4.0.209-beta" targetFramework="net452" />
   <package id="dotless" version="1.4.1.0" targetFramework="net45" />
   <package id="EcmaScript.Net" version="1.0.1.0" targetFramework="net45" />
   <package id="elmah.corelibrary" version="1.2.2" targetFramework="net45" />
   <package id="Elmah.MVC" version="2.1.1" targetFramework="net45" />
-  <package id="fastJSON" version="2.1.3.0" targetFramework="net45" />
+  <package id="fastJSON" version="2.1.5.0" targetFramework="net452" />
   <package id="flexo" version="1.0.19.0" targetFramework="net45" />
   <package id="Glimpse" version="1.8.6" targetFramework="net45" />
   <package id="Glimpse.Ado" version="1.7.3" targetFramework="net45" />
   <package id="Glimpse.AspNet" version="1.9.1" targetFramework="net45" />
-  <package id="Glimpse.CUL" version="4.0.208-beta" targetFramework="net452" />
+  <package id="Glimpse.CUL" version="4.0.209-beta" targetFramework="net452" />
   <package id="Glimpse.Elmah" version="1.1.1" targetFramework="net45" />
   <package id="Glimpse.MiniProfiler" version="1.2.4" targetFramework="net45" />
   <package id="Glimpse.Mvc5" version="1.5.3" targetFramework="net45" />
   <package id="Glimpse.NLog" version="1.4.0" targetFramework="net45" />
-  <package id="Ironman.Core" version="1.0.208-beta" targetFramework="net452" />
-  <package id="Ironman.Core.Assets.Less" version="1.0.208-beta" targetFramework="net452" />
-  <package id="Ironman.Core.Assets.Yui" version="1.0.208-beta" targetFramework="net452" />
-  <package id="Ironman.Default" version="1.0.208-beta" targetFramework="net452" />
+  <package id="Ironman.Core" version="1.0.209-beta" targetFramework="net452" />
+  <package id="Ironman.Core.Assets.Less" version="1.0.209-beta" targetFramework="net452" />
+  <package id="Ironman.Core.Assets.Yui" version="1.0.209-beta" targetFramework="net452" />
+  <package id="Ironman.Default" version="1.0.209-beta" targetFramework="net452" />
   <package id="jQuery" version="2.1.1" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.13.0" targetFramework="net45" />
   <package id="Knockout.Validation" version="1.0.1" targetFramework="net45" />
@@ -56,8 +56,9 @@
   <package id="NLog" version="3.1.0.0" targetFramework="net45" />
   <package id="NLog.Config" version="3.1.0.0" targetFramework="net45" />
   <package id="NLog.Schema" version="3.1.0.0" targetFramework="net45" />
-  <package id="NuGet.Core" version="2.8.2" targetFramework="net45" />
+  <package id="NuGet.Core" version="2.8.3" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net45" />
+  <package id="routedebugger" version="2.1.4.0" targetFramework="net452" />
   <package id="WebActivatorEx" version="2.0.5" targetFramework="net45" />
   <package id="WebGrease" version="1.6.0" targetFramework="net45" />
   <package id="YUICompressor.NET" version="2.7.0.0" targetFramework="net452" />
